--- a/index.html
+++ b/index.html
@@ -2,6 +2,8 @@
 <html>
   <head>
     <meta charset='utf-8'>
+    <link rel="shortcut icon" href="favicon.ico" type="image/x-icon">
+    <link rel="icon" href="favicon.ico" type="image/x-icon">
     <meta http-equiv="X-UA-Compatible" content="chrome=1">
     <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
     <link href='https://fonts.googleapis.com/css?family=Architects+Daughter' rel='stylesheet' type='text/css'>
@@ -31,7 +33,7 @@
           <h3>
           <a id="welcome-to-github-pages" class="anchor" href="#welcome-to-github-pages" aria-hidden="true"><span class="octicon octicon-link"></span></a>介绍</h3>
 
-          <p>这是一个 OS X 平台上，基于 aria2 的下载管理软件，集成各大网盘的 aria2 导出功能，点击右上角立即下载</p>
+          <p>这是一个 OS X 平台上，基于 aria2 的下载管理软件，集成各大网盘的 aria2 导出功能。</p>
 
           <h3>
           <a id="designer-templates" class="anchor" href="#designer-templates" aria-hidden="true"><span class="octicon octicon-link"></span></a>软件截图</h3>
