--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
           <h3>
           <a id="welcome-to-github-pages" class="anchor" href="#welcome-to-github-pages" aria-hidden="true"><span class="octicon octicon-link"></span></a>介绍</h3>
 
-          <p>这是一个 OS X 平台上，基于 aria2 的下载管理软件，集成各大网盘的 aria2 导出功能。</p>
+          <p>这是一个 OS X 平台上，基于 aria2 的下载管理软件，集成各大网盘的 aria2 导出功能。使用反馈可以<a href="#feedback">留言在这。</a></p>
 
           <h3>
           <a id="designer-templates" class="anchor" href="#designer-templates" aria-hidden="true"><span class="octicon octicon-link"></span></a>软件截图</h3>
@@ -67,7 +67,7 @@
           <p>
             <img src="screenshots/help.png" alt="帮助">
           </p>
-          <h4>使用反馈</h4>
+          <h4 name="feedback">使用反馈</h4>
           <p>
             <div class="ds-thread" data-thread-key="1" data-title="麦旋风" data-url="http://soft.idealweb.cn"></div>
             <!-- 多说评论框 end -->
