--- a/index.html
+++ b/index.html
@@ -67,7 +67,8 @@
           <p>
             <img src="screenshots/help.png" alt="帮助">
           </p>
-          <h4 name="feedback">使用反馈</h4>
+          <h4>使用反馈</h4>
+          <a name="feedback"></a>
           <p>
             <div class="ds-thread" data-thread-key="1" data-title="麦旋风" data-url="http://soft.idealweb.cn"></div>
             <!-- 多说评论框 end -->
