--- a/index.html
+++ b/index.html
@@ -32,8 +32,9 @@
         <section id="main-content">
           <h3>
           <a id="welcome-to-github-pages" class="anchor" href="#welcome-to-github-pages" aria-hidden="true"><span class="octicon octicon-link"></span></a>介绍</h3>
-
-          <p>这是一个 OS X 平台上，基于 aria2 的下载管理软件，集成各大网盘的 aria2 导出功能。使用反馈可以<a href="#feedback">留言在这。</a></p>
+          <p>
+          大家Mac下的下载有新选择了！基于aria2集成QQ旋风、百度网盘、迅雷空间离线下载，提升下载速度和稳定性、断点续传、多任务管理。计划支持优酷视频下载等功能。使用反馈可以<a href="#feedback">留言在这。</a>
+          </p>
 
           <h3>
           <a id="designer-templates" class="anchor" href="#designer-templates" aria-hidden="true"><span class="octicon octicon-link"></span></a>软件截图</h3>
