--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
       <div class="inner">
         <h1>麦旋风</h1>
         <h2></h2>
-        <a href="https://github.com/IdeaWebCN" class="button"><small>for OS X 10.6+</small> Download</a>
+        <a href="http://7vih81.com1.z0.glb.clouddn.com/MacXuan.dmg" class="button"><small>for OS X 10.6+</small> Download</a>
       </div>
     </header>
 
