--- a/index.html
+++ b/index.html
@@ -16,6 +16,15 @@
     <![endif]-->
 
     <title>麦旋风</title>
+    <script>
+      var _hmt = _hmt || [];
+      (function() {
+        var hm = document.createElement("script");
+        hm.src = "//hm.baidu.com/hm.js?f672fbbafdf329bd6a76df4ae848a856";
+        var s = document.getElementsByTagName("script")[0]; 
+        s.parentNode.insertBefore(hm, s);
+      })();
+    </script>
   </head>
 
   <body>
