--- a/index.html
+++ b/index.html
@@ -36,6 +36,14 @@
           大家Mac下的下载有新选择了！基于aria2集成QQ旋风、百度网盘、迅雷空间离线下载，提升下载速度和稳定性、断点续传、多任务管理。计划支持优酷视频下载等功能。使用反馈可以<a href="#feedback">留言在这。</a>
           </p>
 
+          <h4>更新日志</h4>
+          <p>
+          <ul>
+            <li>2015-01-06 v0.1.1 体验提升, 迅雷网盘BUG修复。</li>
+            <li>2015-01-05 v0.1.0 初始版本发布。</li>
+          </ul>
+          </p>
+
           <h3>
           <a id="designer-templates" class="anchor" href="#designer-templates" aria-hidden="true"><span class="octicon octicon-link"></span></a>软件截图</h3>
 
