update download url

--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
       <div class="inner">
         <h1>麦旋风</h1>
         <h2></h2>
-        <a href="http://pan.baidu.com/s/1eQBzMEI" class="button"><small>for OS X 10.6+</small> Download</a>
+        <a href="http://pan.baidu.com/s/1jGzvuF8" class="button"><small>for OS X 10.6+</small> Download</a>
       </div>
     </header>
 
